# Path-ORAM

./: README.md  analysis.py  benchmark.py  conventions.md  demo.py  demo_recursive.py  pyproject.toml  results.csv
.github/workflows/: ci.yml
apps/: demo.py
apps/client/: localhostclient.py
apps/server/: localhostserver.py
docs/: index.html  pathoram.html  search.js
docs/pathoram/: client.html  server.html
libs/pathoram-client/: pyproject.toml
libs/pathoram-server/: pyproject.toml
libs/pathoram_client/: demo.py  pyproject.toml
libs/pathoram_client/pathoram_client/: __init__.py  bit_util.py  constants.py  pathoram_client.py
libs/pathoram_client/pathoram_client_tests/: demo.py  test_bit_util.py
libs/pathoram_server/: pyproject.toml
libs/pathoram_server/pathoram_server/: __init__.py  constants.py  pathoram_server.py
src/pathoram/client/: __init__.py  bit_util.py  constants.py  pathoram_client.py
src/pathoram/server/: __init__.py  constants.py  pathoram_server.py
tests/pathoram/: real_world_data.csv  test_encryption.py  test_read_write.py  test_real_data.py  test_security.py  test_setup.py
tests/pathoram/client/: test_bit_util.py  test_recursive.py  test_recursive_server.py
