[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pathoram"
version = "0.1.0"
description = "An implementation of a Path ORAM."
authors = [{ name = "Max Hamilton", email = "max.alexander.hamilton@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["cryptography >=45.0.6", "pympler", "pandas", "matplotlib", "seaborn"]

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "ruff",
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
