[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pathoram_client"
version = "0.1.0"
description = "An implementation of a Path ORAM client. Pairs with the library pathoram_server"
authors = [{ name = "Max Hamilton", email = "max.alexander.hamilton@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["cryptography >=45.0.6"]
