[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pathoram_server"
version = "0.1.0"
description = "An implementation of a Path ORAM server. Pairs with the library pathoram_client"
authors = [{ name = "Max Hamilton", email = "max.alexander.hamilton@gmail.com" }]
requires-python = ">=3.8"
